@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <metadata>
-  <version>8.2</version>
+  <version>8.4</version>
   <dependencies>
     <dependency>profile-plone.restapi:default</dependency>
   </dependencies>
